# NLP_FINAL_PROJECT

./: .gitignore  IMPLEMENTATION_BY_QUESTION.md  README.md  app.py  pyproject.toml  requirements-full.txt  requirements.txt  run_rag_eval.sh  streamlit_app.py
REPORT/: README.md  make_plots.py  report.tex  slide.tex
data/: README.md  hindi_translation_answers.jsonl  hindi_translation_answers.jsonl.bak  hindi_translation_answers_with_mistral.jsonl  hindi_translation_eval_set.json  hindi_translation_manual_scores.json  hindi_translation_report.json  hindi_translation_report.md  rag_answers.jsonl  rag_answers_groq.jsonl  rag_answers_llama.jsonl  rag_answers_local.jsonl  rag_answers_mistral.jsonl  rag_answers_qwen.jsonl  rag_eval_set.json  rag_manual_faithfulness.json  rag_report.json  rag_report.md  rag_report_groq.json  rag_report_groq.md  rag_report_llama.json  rag_report_llama.md  rag_report_local.json  rag_report_local.md  rag_report_mistral.json  rag_report_mistral.md  rag_report_qwen.json  rag_report_qwen.md  stance_report.json  stance_report_overnight.json  stance_report_targeted.json  temporal_report.json  topic_report.json  topic_report_k12.json  topic_report_k8.json
data/faiss_rag_index/: manifest.json
data/streamlit_export/: README.md  overview_stats.json
scripts/: README.md  analyze_stance.py  analyze_stance_targeted.py  analyze_temporal_topics.py  analyze_topics.py  ask_rag.py  build_rag_index.py  evaluate_hindi_translation.py  evaluate_rag.py  ingest_worldnews.py  print_stats.py
src/reddit_worldnews_trump/: README.md  __init__.py  archive_client.py  (+9 more)
