[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-worldnews-trump-overview"
version = "0.1.0"
description = "Point 1.1 pipeline for the NLP project using a geopolitics subreddit with Trump relevance flags."
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.3",
  "scikit-learn>=1.8.0",
  "sentence-transformers>=5.3.0",
  "sentencepiece>=0.2.1",
  "streamlit>=1.44.0",
  "torch>=2.11.0",
  "transformers>=5.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
